fix cards alignment

--- a/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-manufacturing/css/accessibility-features.less
+++ b/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-manufacturing/css/accessibility-features.less
@@ -1,6 +1,6 @@
 html.adobeguides-text-size {
   .manufacturing-guides-topic-page .breadcrumb {
-    padding: 1.25rem !important;
+    padding: 18px !important;
   }
   .custom-container {
     .gu-custom-container {
@@ -166,7 +166,7 @@ html#adobeguides-dark-contrast {
 
   .gu-theme_icon.dark {
     filter: brightness(0) saturate(100%) invert(27%) sepia(25%) saturate(4907%)
-      hue-rotate(33deg) brightness(75%) contrast(100%);
+      hue-rotate(33deg) brightness(130%) contrast(100%);
   }
   .gu-search__icon {
     filter: brightness(0) saturate(100%) invert(27%) sepia(25%) saturate(4907%)
