--- a/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-manufacturing/css/custom-container.less
+++ b/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-manufacturing/css/custom-container.less
@@ -206,7 +206,7 @@
 @media (min-width: 1024px) {
   html.adobeguides-text-size {
     .custom-container .gu-custom-container .col-3grid {
-      margin-bottom: 130px !important;
+      margin-bottom: 134px !important;
     }
   }
 }
