--- a/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-manufacturing/css/toolbar.less
+++ b/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-manufacturing/css/toolbar.less
@@ -129,8 +129,7 @@ html#adobeguides-dark-contrast {
 .language-navigation,
 .gu-accessibility_icon-container {
   img {
-    filter: brightness(0) saturate(100%) invert(27%) sepia(25%) saturate(4907%)
-      hue-rotate(33deg) brightness(150%) contrast(91%);
+    filter: brightness(0) saturate(100%) invert(27%) sepia(25%) saturate(4907%) hue-rotate(33deg) brightness(180%) contrast(55%);
   }
 }
 }
